--- a/customaddon/advanced_sale/views/sale_order_inherit.xml
+++ b/customaddon/advanced_sale/views/sale_order_inherit.xml
@@ -12,5 +12,17 @@
                 </field>
             </field>
         </record>
+
+
+<!--        <record id="view_order_tree" model="ir.ui.view">-->
+<!--            <field name="model">sale.order</field>-->
+<!--            <field name="inherit_id" ref="sale.view_order_tree"-->
+<!--            />-->
+<!--            <field name="arch" type="xml">-->
+<!--                <field name="date_order" position="after">-->
+<!--                    <field name=""/>-->
+<!--                </field>-->
+<!--            </field>-->
+<!--        </record>-->
     </data>
 </odoo>
