--- a/customaddon/advanced_sale/views/sale_order_inherit.xml
+++ b/customaddon/advanced_sale/views/sale_order_inherit.xml
@@ -24,5 +24,14 @@
 <!--                </field>-->
 <!--            </field>-->
 <!--        </record>-->
+        <record id="view_sales_order_filter" model="ir.ui.view">
+            <field name="model">sale.order</field>
+            <field name="inherit_id" ref="sale.view_sales_order_filter"/>
+            <field name="arch" type="xml">
+                <xpath expr="." position="inside">
+                    <filter string="Discount Code" name="Discount Code" domain="[('partner_id.customer_discount_code','!=',False)]"></filter>
+                </xpath>
+            </field>
+        </record>
     </data>
 </odoo>
