--- a/customaddon/advanced_sale/views/res_partner_inherit.xml
+++ b/customaddon/advanced_sale/views/res_partner_inherit.xml
@@ -18,7 +18,8 @@
             <field name="inherit_id" ref="base.view_res_partner_filter"/>
             <field name="arch" type="xml">
                 <xpath expr="." position="inside">
-                    <filter string="Discount Code" name="Discount Code" domain="[('customer_discount_code','!=',False)]"></filter>
+                    <filter string="Discount Code" name="Discount Code"
+                            domain="[('customer_discount_code','!=',False)]"></filter>
                 </xpath>
             </field>
         </record>
@@ -32,6 +33,16 @@
                     <field name="customer_discount_code"/>
                 </field>
             </field>
+        </record>
+
+
+        <record id="mass_update_discount_code" model="ir.actions.server">
+            <field name="name">Update Code</field>
+            <field name="model_id" ref="base.model_res_partner"/>
+            <field name="binding_model_id" ref="base.model_res_partner"/>
+            <field name="binding_view_types">list</field>
+            <field name="state">code</field>
+            <field name="code">action = records.add_discount_code()</field>
         </record>
     </data>
 </odoo>
